deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: stats
  name: stats-ui
  labels:
    app: stats-ui
spec:
  replicas: 3
  selector:
    matchLabels:
      app: stats-ui
  template:
    metadata:
      labels:
        app: stats-ui
    spec:
      imagePullSecrets:
        - name: robot-secret
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: stats-ui
        image: ncr.sky.nhn.no/appmarket-mgmt/acr-ui:2.6
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
