deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: acr
  name: acr-ui-service
spec:
  type: NodePort
  selector:
    app: acr-ui
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: http
