deploy/http-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stats
  namespace: stats
  annotations:
    gatewayapi-operator.vitistack.io/enabled: "true"
    ipam.vitistack.io/zone: hnet-private # eller hnet-public eller inet
    gatewayapi-operator.vitistack.io/cluster-issuer: internpki # eller letsencrypt-prod
spec:
  parentRefs:
    - name: am-gateway
      sectionName: stats2.appmarket.nhn.no
      namespace: gateways
  hostnames:
    - stats2.appmarket.nhn.no
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: stats-service
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
