deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: internpki
    dns.nhn.no/override-infrastructure: '{"infrastructure":["helsenett","internett"]}'
  name: acr-ui-ingress
  namespace: acr
spec:
  ingressClassName: avi-ingress-class-helsenett
  rules:
    - host: costreport.appmarket.nhn.no
      http:
        paths:
          - backend:
              service:
                name: acr-ui-service
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - costreport.appmarket.nhn.no
      secretName: acr-ui-tls # tjeneste-tls
